# forth-py

./: .gitignore  Makefile  README.md  TODO.md  forth.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_forth.py  testi.forth
.github/workflows/: python-app.yml
examples/: arith.forth  halt-in-between.forth  invalid.forth  io.forth  meaning-of-life.forth  multi-line-func.forth
src/forth/: __init__.py  forth.py  main.py  ops.py  utils.py
tests/: test_entrypoint.py  test_forth.py  test_ops.py  test_utils.py
