[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'forth-py'
version = '0.1.0'
authors = [{ name = 'Markus H (MawKKe)', email = 'markus@mawkke.fi' }]
description = 'Forth-like interpreter in Python'
license = { text = 'Apache License 2.0' }
readme = 'README.md'
requires-python = '>=3.8'
dependencies = []

#[template.plugins.default]
#src-layout = true

[project.optional-dependencies]
dev = [
  'ruff>=0.3',
  'pytest>=7',
  'pytest-cov>=4.1',
  'mypy>=1.10',
  'pre-commit>=3.5',
  'pip-tools>=7.4',
]

[project.urls]
homepage = 'https://github.com/MawKKe/forth-py'
Issues = 'https://github.com/MawKKe/forth-py/issues'

[project.scripts]
forth = 'forth:main'

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Use single quotes rather than double quotes.
quote-style = 'single'
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'C901']

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
